# meetstream-agent

./: .env.example  README.agents.md  README.md  RESTRUCTURING.md  main.py  mcp.config.json  pyproject.toml
app/: .env.example  __init__.py  agent.py  server.py
app/agent_modules/: README.md  __init__.py  non_realtime_agent.py  realtime_agent.py
app/legacy_agents/: README.md  __init__.py  mcp_setup.py  non_realtime_agent.py  tools.py
app/meetstream/: __init__.py  audio.py  config.py  outbound.py  ws_handlers.py
app/realtime/: __init__.py  events.py  mcp.py  pipeline.py
app/routes/: __init__.py  pages.py  websockets.py
app/static/: app.js  chat.html  index.html
app/unsused/: maddy-server.py  sample_server.py
docs/: mcp.md
