[project]
name = "meetstream-bridge"
version = "0.2.0"
description = "Open-source MeetStream ↔ OpenAI Realtime bridge (FastAPI WebSockets)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.27.0",
    "ipython>=9.5.0",
    "numpy>=2.0.0",
    "openai-agents[voice]>=0.2.11",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
